# WioTerminalHarmony

./: CMakeLists.txt  README.md
firmware/: linker.ld
firmware/src/: .gitignore  app.cpp  main.c  regenerate_harmony.mk
firmware/src/config/default/: .gitignore  default.xml  harmony.prj
